--- a/vs.html
+++ b/vs.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2>Email Field</h2>
+<h2>Campo de e-mail</h2>
 
 <p>The <strong>input type="email"</strong> is used for input fields that should contain an e-mail address:</p>
 
